vX.Y.Z (YYYY-MM-YY)

- Fix exit bug when building AppImage outside of the container
- Update man page make rules to match docutils v0.21.1 set since v0.61.2

v0.61.5 (2024-08-19)

- build: add --data flat to specify where datagen will create flat files when
  not doing a streaming load
- mysql: build-db minimal fixes to work with 8.0
- mysql: fix payment sp out_w_city size to match table definition
- driver3: minimal fixes to work with MySQL 8.0 stored procedures
- test-connection-scaling: add --start --stop --step flags to control range or
  testing
- Add -g flag to build script to specify whether flat files need to be
  generated for any database loading that is not streaming data
- mysql: refactor script flags for handling socket path to match MySQL binaries
- build: add --mysql-stored-procedures to specify location of MySQL stored
  procedures
- Minimal updates running against MySQL 8.0 in a 1-tier client-server
  configuration with socket files
- mysql delivery stored procedure: add use of FOR UPDATE and missing ORDER BY
- mysql payment stored procedure: use of of FOR UPDATE and missing c_data
- pgsql: refactor automatic database creation logic to use template1
- AppImage: add missing perl modules for flame graphs
- AppImage: add, again, python libraries for rst2html5 that were accidentally
  removed v0.61.3.
- AppImage: bump touchstone-tools to v0.9.1
- generate-report now relies on touchstone-tools v0.9.1 to generate flame
  graphs
- build: add --parallelism flag to limit processes used for data loading

v0.61.4 (2024-08-12)

- Fix run script but introduced in v0.61.3
- AppImage: add missing libraries for dbt2 binaries
- Add test-connection-scaling script for performance testing example
- AppImage: include PostgreSQL C stored functions, but needs to be manually
  extracted and installed
- pgsql: add pgsql-drop-stored-procs script to remove stored functions

v0.61.3 (2024-08-08)

- Allow tests to run if rsync is not installed, except in cases where the