@@ -1,0 +1,35 @@
+# DBT-2 Parameter Testing Example
+
+# Database control settings
+
+db_start_command = "pg_ctl -D /tmp/pgdata start"
+db_stop_command = "pg_ctl -D /tmp/pgdata stop -m fast"
+db_param_name = "shared_buffers"
+db_param_values = ["1GB", "2GB", "3GB", "4GB"]
+
+# Required general settings:
+
+# Test mode, see driver documentation for details.  Use 1 or 3.
+mode = 3
+
+# Database name
+database_name = "dbt2"
+
+# Scale factor, the number of warehouses that have been loaded
+warehouses = 1
+
+# Test duration in seconds
+duration = 300
+
+[[driver]]
+# These settings are required
+
+# Hostname where a driver will be started.  Using "localhost" will not open an
+# ssh connection but instead just execute locally.
+driver_addr = "localhost"
+
+# Hostname of a client to connect to, if mode is 1
+#client_addr = "client1.int"
+
+# Hostname of a client to connect to, if mode is 3
+database_addr = "localhost"
